--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
-  
   "repository": {
     "type": "git",
-    "url": "https://github.com/tsola2002/book-services-group-c.git"},
+    "url": "https://github.com/tsola2002/book-services-group-c.git"
+  },
   "dependencies": {
+    "@ant-design/charts": "^2.3.0",
     "antd": "^5.25.2",
     "axios": "^1.9.0",
     "firebase": "^11.7.3",
